# litcChallenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  setup.cfg
src/api/: __init__.py  config.py  exceptions.py  models.py  routes.py  scripts.py  swagger.json
src/api/helpers/: data_transactions.py  filters.py
src/api/migrations/: env.py
src/api/migrations/versions/: 9f1e34d95d02_initial_migration.py
