[metadata]
name = api
author = Juanlu
version = 0.0.1

[options]
package_dir=
    =src
packages=find:
include_package_data=True
python_requires = >=3.7
install_requires =
    aiohttp==3.8.4
    Flask==2.2.3
    Flask-SQLAlchemy==3.0.3
    Flask-Migrate==4.0.4
    flask-swagger-ui==4.11.1
    Faker==0.7.4

[options.packages.find]
where=src

[options.package_data]
* = *